test(#3): add full test suite for EuroCoinSqliteRepository